# inflation-nowcaster

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
dags/: __init__.py  scraping_dag.py
notebooks/: 01_price_analysis.ipynb
src/: __init__.py
src/models/: __init__.py  forecast.py  nowcast.py
src/pipeline/: __init__.py  etl.py  validation.py
src/scrapers/: __init__.py  base.py  retailers.py
streamlit_app/: app.py
tests/: __init__.py  test_pipeline.py
